--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@jest/types": "^28.1.3",
+    "@loadable/component": "^5.15.2",
     "@reduxjs/toolkit": "^1.8.3",
     "bfj": "^7.0.2",
     "camelcase": "^6.2.1",
@@ -54,6 +55,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/loadable__component": "^5.13.4",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
