--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "bfj": "^7.0.2",
     "camelcase": "^6.2.1",
+    "express": "^4.18.1",
     "fs-extra": "^10.0.0",
     "prompts": "^2.4.2",
     "react": "^18.2.0",
@@ -21,7 +22,9 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
+    "start-server": "node dist/server.js",
     "build": "node scripts/build.js",
+    "build-server": "node scripts/build.server.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
@@ -54,13 +57,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.1",
     "@types/loadable__component": "^5.13.4",
-    "@types/node": "^16.7.13",
+    "@types/node": "^18.0.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/webpack": "^5.28.0",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -94,11 +100,13 @@
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.2.5",
+    "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.4.2",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
+    "webpack-node-externals": "^3.0.0",
     "workbox-webpack-plugin": "^6.4.1"
   },
   "packageManager": "yarn@3.2.2"
