--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
     "semver": "^7.3.5",
-    "tailwindcss": "^3.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -67,6 +65,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/webpack": "^5.28.0",
+    "autoprefixer": "^10.4.7",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -94,11 +93,13 @@
     "postcss-preset-env": "^7.0.1",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
+    "react-refresh": "^0.11.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.6",
     "terser-webpack-plugin": "^5.2.5",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
