--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@jest/types": "^28.1.3",
     "@loadable/component": "^5.15.2",
     "@reduxjs/toolkit": "^1.8.3",
     "bfj": "^7.0.2",
@@ -50,8 +49,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@jest/types": "^28.1.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
+    "@swc/core": "^1.2.218",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -99,6 +100,7 @@
     "sass-loader": "^12.3.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "swc-loader": "^0.2.3",
     "tailwindcss": "^3.1.6",
     "terser-webpack-plugin": "^5.2.5",
     "ts-loader": "^9.3.1",
