--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "dependencies": {
     "@loadable/component": "^5.15.2",
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/redux-logger": "^3.0.9",
     "bfj": "^7.0.2",
     "camelcase": "^6.2.1",
     "express": "^4.18.1",
-    "fs-extra": "^10.0.0",
-    "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "redux-logger": "^3.0.6",
     "semver": "^7.3.5",
     "web-vitals": "^2.1.0"
   },
@@ -81,6 +81,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
+    "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
@@ -92,6 +93,7 @@
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
+    "prompts": "^2.4.2",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-refresh": "^0.11.0",
