--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@loadable/component": "^5.15.2",
     "@reduxjs/toolkit": "^1.8.3",
-    "@types/redux-logger": "^3.0.9",
     "bfj": "^7.0.2",
     "camelcase": "^6.2.1",
     "express": "^4.18.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -62,8 +63,10 @@
     "@types/loadable__component": "^5.13.4",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.0",
+    "@types/react-big-calendar": "^0.38.1",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.9",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/webpack": "^5.28.0",
     "autoprefixer": "^10.4.7",
